--- a/packages/proto/public/profile/index.html
+++ b/packages/proto/public/profile/index.html
@@ -9,6 +9,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
         <script type="module" src="/js/json-loader.js"></script>
+        <script type="module" src="/js/restful-form.js"></script>
+        <script type="module" src="/js/profile-view.js"></script>
         <script type="module">
             import { relayEvent } from '/js/relay-event.js';
       
@@ -17,9 +19,38 @@
     </head>
     <body>
         <main>
-          <json-object src="/api/profiles/izzy">
+            <profile-view>
+                <span slot="userid">cnadin</span>
+                <span slot="firstname">Christina</span>
+                <span slot="lastname">Nadin</span>
+                <img slot="profilepic" src="/images/bunny0.png" />
+              </profile-view>
+            <restful-form slot="form" src="/api/profiles/cnadin">
+                <label>
+                  <span>Username:</span>
+                  <input name="userid" />
+                </label>
+                <label>
+                  <span>First Name:</span>
+                  <input name="firstname" />
+                </label>
+                <label>
+                  <span>Last name:</span>
+                  <input name="lastname" />
+                </label>
+                <label>
+                  <span>Profile picture:</span>
+                  <input name="profilepic" />
+                </label>
+                <button
+                  slot="delete"
+                  onclick="relayEvent(event,'restful-form:delete')"
+                  >Delete this Profile</button
+                >
+              </restful-form>
+          <json-object src="/api/profiles/cnadin">
             <a href="#" onclick="relayEvent(event, 'json-object:open')">
-                Isabel Nuton
+                Christina Nadin
             </a>
           </json-object>
         </main>
